--- a/.github/workflows/os_versions.yml
+++ b/.github/workflows/os_versions.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python versions
+name: OS versions
 
 on:
   push:
@@ -13,18 +13,18 @@ on:
 jobs:
   build:
 
-    runs-on: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os-version }} 
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.11"]
+        os-version: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up OS ${{ matrix.os-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        os-version: ${{ matrix.os-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
