--- a/.github/workflows/os_versions.yml
+++ b/.github/workflows/os_versions.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: OS versions
+name: Operating systems
 
 on:
   push:
@@ -13,26 +13,24 @@ on:
 jobs:
   build:
 
-    runs-on: ${{ matrix.os-version }} 
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os-version: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up OS ${{ matrix.os-version }}
+    - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        os-version: ${{ matrix.os-version }}
+        python-version: "3.10"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install .[dev]
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names
         flake8
     - name: Test with pytest
       run: |
